# testeranto

./: .dockerignore  .eslintrc.js  .gitignore  .npmignore  .vscodeignore  .yarnrc.yml  3.json  4.json  ALL_LICENSES.txt  Bundle.Dockerfile  CNAME  Dockerfile.golang  Dockerfile.mothership  Dockerfile.node  Dockerfile.python  Dockerfile.web  Gemfile  LICENSE  MyReport.tsx  README-VSCODE.md  README.html  README.md  Rakefile  Report copy.tsx  Report.Dockerfile  Report.tsx.txt  TestReport.js  aider.Dockerfile  allTests.ts  allTestsUtils.ts  app.yaml  apple.txt  base.config.mts  bazel.config.mts  betatesteranto.config.mjs  betatesteranto.config.mts  build-tests.ts  build.ts  bun.lockb  bundle.js  (+93 more)
contracts/: FallenAngels.sol  LiquidCollections.sol  MyBaseContract.sol  MyFirstContract.sol
design-editor/: DesignEditor.tsx  server.ts  types.ts
designs/: default-project.json
docs/: DB.json  Report.css  Report.js  TaskManBackEnd.mjs  TaskManFrontEnd.css  TaskManFrontEnd.js  aiderTest.sh  features.test.js  index.html  index.md  release.md  report.html  style.md  test-page-components.md  testeranto.json  testing.ai.txt  testing.prompt.txt  tests.json
example/: .pylintrc  .rubocop.yml  Calculator-test.rb  Calculator.go  Calculator.golingvu.adapter.go  Calculator.golingvu.go  Calculator.golingvu.implementation.go  Calculator.golingvu.specification.go  Calculator.golingvu.test.go  Calculator.py  (+23 more)
src/pitono/: Pitono.py  README.md  __init__.py  base_given.py  base_suite.py  base_then.py  base_when.py  core_generator.py  pyproject.toml  setup.py  types.py
src/pitono/PM/: python.py
(+2467 files in other folders)
