[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pitono"
version = "0.1.0"
description = "Python implementation of Testeranto"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "websockets>=12.0",
]
authors = [
    { name = "Testeranto Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.scripts]
pitono-core-generator = "core_generator:main"
